--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Landing Page</title>
   </head>
   <body>
-  
+    <nav>
+      <div class="logo"></div>
+      <ul>
+        <li><a>Link1</a></li>
+        <li><a>Link2</a></li>
+        <li><a>Link3</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
