Start header section

--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
         <li><a>Link3</a></li>
       </ul>
     </nav>
+    <section class="header">
+      <div class="header-container">
+        <div></div>
+        <div><img src=""></div>
+      </div>
+    </section>
   </body>
 </html>
