Add temporary text to header section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     </nav>
     <section class="header">
       <div class="header-container">
-        <div></div>
+        <div>
+          <h1>text</h1>
+          <p>More text</p>
+          <button>Button</button>
+        </div>
         <div><img src=""></div>
       </div>
     </section>
