Start information section

--- a/index.html
+++ b/index.html
@@ -24,5 +24,25 @@
         <div><img src=""></div>
       </div>
     </section>
+    <section class="information">
+      <div class="info-container">
+        <div class="info">
+          <div class="info-img"><img src=""></div>
+          <p></p>
+        </div>
+        <div class="info">
+          <div class="info-img"><img src=""></div>
+          <p></p>
+        </div>
+        <div class="info">
+          <div class="info-img"><img src=""></div>
+          <p></p>
+        </div>
+        <div class="info">
+          <div class="info-img"><img src=""></div>
+          <p></p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
