Start quote and contact section, add temp text

--- a/index.html
+++ b/index.html
@@ -26,22 +26,36 @@
     </section>
     <section class="information">
       <div class="info-container">
+        <h3>Information</h3>
         <div class="info">
           <div class="info-img"><img src=""></div>
-          <p></p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus impedit molestiae</p>
         </div>
         <div class="info">
           <div class="info-img"><img src=""></div>
-          <p></p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non rem atque illum facilis aspernatur nostrum quisquam soluta, cum esse nemo fugiat quam blanditiis sint iure officiis nam! Nostrum, cumque id?</p>
         </div>
         <div class="info">
           <div class="info-img"><img src=""></div>
-          <p></p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sint, qui iusto</p>
         </div>
         <div class="info">
           <div class="info-img"><img src=""></div>
-          <p></p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, hic officia? Optio dolores ducimus dolore</p>
         </div>
+      </div>
+    </section>
+    <section class="quote">
+      <div class="quote-container">
+        <p id="quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi dignissimos suscipit harum, qui obcaecati </p>
+        <p id="quote-name">Name</p>
+      </div>
+    </section>
+    <section class="contact">
+      <div class="contact-container">
+        <h5>Contact</h5>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam id, illum</p>
+        <button>Button3</button>
       </div>
     </section>
   </body>
