--- a/index.html
+++ b/index.html
@@ -58,5 +58,10 @@
         <button>Button3</button>
       </div>
     </section>
+    <section class="footer">
+      <div class="footer-container">
+        <p>Made by <a href="https://github.com/ReN-FL">ReN</a></p>
+      </div>
+    </section>
   </body>
 </html>
