Add link to stylesheet

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <nav>
-      <div class="logo"></div>
+      <div class="logo">[]</div>
       <ul>
         <li><a>Link1</a></li>
         <li><a>Link2</a></li>
