Add styles, update readme

--- a/index.html
+++ b/index.html
@@ -7,62 +7,66 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <nav>
-      <div class="logo">[]</div>
-      <ul>
-        <li><a>Link1</a></li>
-        <li><a>Link2</a></li>
-        <li><a>Link3</a></li>
-      </ul>
-    </nav>
-    <section class="header">
-      <div class="header-container">
-        <div>
-          <h1>text</h1>
-          <p>More text</p>
-          <button>Button</button>
+    <div class="flex-container">
+      <nav>
+        <a href="index.html"><div class="logo">Logo</div></a>
+        <ul>
+          <li><a href="index.html">Link1</a></li>
+          <li><a href="index.html">Link2</a></li>
+          <li><a href="index.html">Link3</a></li>
+        </ul>
+      </nav>
+      <section class="header">
+        <div class="header-container">
+          <div class="text-container">
+            <h1>This website is awesome</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat vel sunt consectetur quos culpa totam sequi reiciendis Lorem ipsum dolor sit amet </p>
+            <button class="h-button">Button</button>
+          </div>
+          <div><img src="/images/380x224.svg"></div>
         </div>
-        <div><img src=""></div>
-      </div>
-    </section>
-    <section class="information">
-      <div class="info-container">
+      </section>
+      <section class="information">
         <h3>Information</h3>
-        <div class="info">
-          <div class="info-img"><img src=""></div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus impedit molestiae</p>
+        <div class="info-container">
+          <div class="info">
+            <div class="info-img"><img src="/images/240x202.svg"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="info">
+            <div class="info-img"><img src="/images/240x202.svg"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="info">
+            <div class="info-img"><img src="/images/240x202.svg"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="info">
+            <div class="info-img"><img src="/images/240x202.svg"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
         </div>
-        <div class="info">
-          <div class="info-img"><img src=""></div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non rem atque illum facilis aspernatur nostrum quisquam soluta, cum esse nemo fugiat quam blanditiis sint iure officiis nam! Nostrum, cumque id?</p>
+      </section>
+      <section class="quote">
+        <div class="quote-container">
+          <p id="quote">The test of success is not what you do when you are on top. Success is how high you bounce when you hit the bottom.</p>
+          <p id="quote-name">-George S. Patton</p>
         </div>
-        <div class="info">
-          <div class="info-img"><img src=""></div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sint, qui iusto</p>
+      </section>
+      <section class="contact">
+        <div class="contact-container">
+          <h5>Call to action! it's time!</h5>
+          <div>
+            <p>Sign up for our product by clicking that button right over there!</p>
+            <button>Sign up</button>
+          </div>
         </div>
-        <div class="info">
-          <div class="info-img"><img src=""></div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, hic officia? Optio dolores ducimus dolore</p>
+      </section>
+      <section class="footer">
+        <div class="footer-container">
+          <p>Made by <a target="_blank" href="https://github.com/ReN-FL">ReN</a></p>
         </div>
-      </div>
-    </section>
-    <section class="quote">
-      <div class="quote-container">
-        <p id="quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi dignissimos suscipit harum, qui obcaecati </p>
-        <p id="quote-name">Name</p>
-      </div>
-    </section>
-    <section class="contact">
-      <div class="contact-container">
-        <h5>Contact</h5>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam id, illum</p>
-        <button>Button3</button>
-      </div>
-    </section>
-    <section class="footer">
-      <div class="footer-container">
-        <p>Made by <a href="https://github.com/ReN-FL">ReN</a></p>
-      </div>
-    </section>
+      </section>
+    </div>
   </body>
 </html>
