--- a/index.html
+++ b/index.html
@@ -23,26 +23,26 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat vel sunt consectetur quos culpa totam sequi reiciendis Lorem ipsum dolor sit amet </p>
             <button class="h-button">Button</button>
           </div>
-          <div><img src="/images/380x224.svg"></div>
+          <div><img src="images/380x224.png" alt="placeholder image"></div>
         </div>
       </section>
       <section class="information">
         <h3>Information</h3>
         <div class="info-container">
           <div class="info">
-            <div class="info-img"><img src="/images/240x202.svg"></div>
+            <div class="info-img"><img src="images/240x202.png" alt="placeholder image"></div>
             <p>this is some subtext under an illustration or image</p>
           </div>
           <div class="info">
-            <div class="info-img"><img src="/images/240x202.svg"></div>
+            <div class="info-img"><img src="images/240x202.png" alt="placeholder image"></div>
             <p>this is some subtext under an illustration or image</p>
           </div>
           <div class="info">
-            <div class="info-img"><img src="/images/240x202.svg"></div>
+            <div class="info-img"><img src="images/240x202.png" alt="placeholder image"></div>
             <p>this is some subtext under an illustration or image</p>
           </div>
           <div class="info">
-            <div class="info-img"><img src="/images/240x202.svg"></div>
+            <div class="info-img"><img src="images/240x202.png" alt="placeholder image"></div>
             <p>this is some subtext under an illustration or image</p>
           </div>
         </div>
@@ -64,7 +64,7 @@
       </section>
       <section class="footer">
         <div class="footer-container">
-          <p>Made by <a target="_blank" href="https://github.com/ReN-FL">ReN</a></p>
+          <p>Made by <a target="_blank" href="https://github.com/ReN-FL">ReN</a> - 2024</p>
         </div>
       </section>
     </div>
